Jump Start Changelog
====================

2.0.0-beta2
-----

* Added two new theme bases; see *Appearance > Theme Base*.
* Added editor stylesheet for editing posts and pages.
* Added unique HTML ID's to sections of custom layouts like `page-slug-section-1`.
* Added system to check if saved theme options match selected theme base.
* Expanded options for divider component.
* Fixed responsiveness of Promo Box element.
* Fixed issues with new Footer Sync feature and using Columns element. Make sure to update Layout Builder plugin to v2.0.2, also.
* Fixed "color" value of "typography" option type.
* Fixed bug with not being able to apply background color opacity to display options for columns in the Columns element.
* Various little fixes and enhancements to Super User theme base and selecting various options.
* Fixed bug where controls of Gallery post slider moves entire outer post grid slider.
* Fixed admin bar for logged-in user, viewing site on mobile.
* Fixed "Column Height" force of Columns element, in Firefox.
* Fixed issues with "No, don't apply featured image link to single post" in post options.
* Fixed fatal error with WooCommerce.
* Little fixes to WPML compatibility.

2.0.0-beta1
-----

* **Updated Theme Blvd framework to 2.5.0**
* Complete frontend theme re-design.
* Added full support for post formats by default.
* Added mega menus, configured from *Appearance > Menus*.
* Added frontend sticky menu by default.
* Added frontend "Scroll to Top" button by default.
* Added frontend floating search box by default.
* Added frontend social icons, by default.
* Added automatic frontend WPML language switcher, if using WPML plugin.
* Added share icons to single posts.
* Added related posts display to single posts.
* Added "Author Box" for author archives and single posts, configured from user profile admin page.
* New mobile menu design, which animates from the side of the device.